minor changes to targeting sytem, fixed placement overlap and redefined shot, hit and miss. refactored index generation with randomIndex()

--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,17 @@ header {
 h1 {
   margin: 0;
   font-family: 'Audiowide', sans-serif;
-  font-size: 7em;
+  font-size: 5em;
   transform: perspective(300px) rotateX(25deg);
   background: linear-gradient(#002027, #002027, #eaeaea, #002027, #002027);
   -webkit-background-clip: text;
   color: transparent;
   background-clip: text;
   -webkit-text-stroke: 0.1px dimgray;
+}
+
+.welcome {
+  font-size: 7em;
 }
 
 #play {
@@ -70,6 +74,14 @@ main {
   aspect-ratio: 1 / 1;
   background-color: rgb(184 184 184 / 50%);
   border: 1px solid rgb(0 255 248 / 67%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.cell img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .ships {
